# stadion_so_projekt

./: CMakeLists.txt  Fan.cpp  Fan.h  Gate.cpp  Gate.h  Kibic.cpp  Kibic.h  Kierownik.cpp  Kierownik.h  Logger.py  Pracownik_tech.cpp  Pracownik_tech.h  Stadion.cpp  Stadion.h  config.py  distibutor.py  fan.py  kibic.cpp  kibic.h  main.cpp  main.py  security_check_process.py  simulation.py  stadion.cpp  stadion.h  vip_fan.py  worker.py
